--- a/app/src/main/res/layout/activity_game_empty.xml
+++ b/app/src/main/res/layout/activity_game_empty.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmptyGameActivity">
+    tools:context=".EmptyGameActivity"
+    android:background="@drawable/background"
+    >
 
 </android.support.constraint.ConstraintLayout>
