--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RankEmptyActivity">
+    tools:context=".RankEmptyActivity"
+    android:background="@drawable/background"
+    >
 
     <ListView
         android:id="@+id/rankList"
