--- a/app/src/main/res/layout/activity_show_images.xml
+++ b/app/src/main/res/layout/activity_show_images.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    tools:context=".ShowImages"
+    tools:context="ShowImages"
+    android:background="@drawable/background"
     >
 
     <ListView
@@ -15,16 +16,19 @@
         android:layout_marginBottom="50dp">
     </ListView>
 
-
     <Button
         android:id="@+id/buttonClear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="7dp"
+        android:background="@drawable/buttonshape"
         android:text="@string/clear_gallery"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </RelativeLayout>
